--- a/config.ini
+++ b/config.ini
@@ -40,6 +40,6 @@ collection = movies
 
 [mail]
 host = smtp.qq.com
-pwd = jrfcvnobrakpbhcj
-sender = 377071769@qq.com
-receiver = 377071769@qq.com
+pwd = *
+sender = *@qq.com
+receiver = *@qq.com
